# flash_math

./: CMakeLists.txt  EulerAngles.cpp  EulerAngles.h  EulerAnglesTest.cpp  Matrix3D.cpp  Matrix3D.h  Matrix3DTest.cpp  Orientation.h  OrientationTest.cpp  Quaternion.h  README.md  Vector3D.cpp  Vector3D.h  Vector3DTest.cpp  conanfile.py  main.cpp  test_run.cpp
core/: Matrix3D.cpp  Matrix3D.h  Vector3D.cpp  Vector3D.h
include/: EulerAngles.h  Mat4.h  Vec4.h
orientation/: EulerAngles.cpp  EulerAngles.h  Orientation.cpp  Quaternion.cpp  Quaternion.h
src/: EulerAngles.cpp  Mat4.cpp  Mat4.h  Orientation.cpp  Quaternion.cpp  Vec4.cpp
src/core/: Mat4.cpp  Mat4.h  Matrix3D.cpp  Matrix3D.h  Vec4.cpp  Vec4.h  Vector3D.cpp  Vector3D.h
src/orientation/: EulerAngles.cpp  EulerAngles.h  Orientation.cpp  Orientation.h  Quaternion.cpp  Quaternion.h
